// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`regrest DELETE 1`] = `"{}"`;

exports[`regrest DELETE 2`] = `Object {}`;

exports[`regrest GET 1`] = `
"{
  \\"userId\\": 1,
  \\"id\\": 1,
  \\"title\\": \\"sunt aut facere repellat provident occaecati excepturi optio reprehenderit\\",
  \\"body\\": \\"quia et suscipit\\\\nsuscipit recusandae consequuntur expedita et cum\\\\nreprehenderit molestiae ut ut quas totam\\\\nnostrum rerum est autem sunt rem eveniet architecto\\"
}"
`;

exports[`regrest GET 2`] = `
Object {
  "body": "quia et suscipit
suscipit recusandae consequuntur expedita et cum
reprehenderit molestiae ut ut quas totam
nostrum rerum est autem sunt rem eveniet architecto",
  "id": 1,
  "title": "sunt aut facere repellat provident occaecati excepturi optio reprehenderit",
  "userId": 1,
}
`;

exports[`regrest GET with params 1`] = `
"[
  {
    \\"postId\\": 1,
    \\"id\\": 1,
    \\"name\\": \\"id labore ex et quam laborum\\",
    \\"email\\": \\"Eliseo@gardner.biz\\",
    \\"body\\": \\"laudantium enim quasi est quidem magnam voluptate ipsam eos\\\\ntempora quo necessitatibus\\\\ndolor quam autem quasi\\\\nreiciendis et nam sapiente accusantium\\"
  },
  {
    \\"postId\\": 1,
    \\"id\\": 2,
    \\"name\\": \\"quo vero reiciendis velit similique earum\\",
    \\"email\\": \\"Jayne_Kuhic@sydney.com\\",
    \\"body\\": \\"est natus enim nihil est dolore omnis voluptatem numquam\\\\net omnis occaecati quod ullam at\\\\nvoluptatem error expedita pariatur\\\\nnihil sint nostrum voluptatem reiciendis et\\"
  },
  {
    \\"postId\\": 1,
    \\"id\\": 3,
    \\"name\\": \\"odio adipisci rerum aut animi\\",
    \\"email\\": \\"Nikita@garfield.biz\\",
    \\"body\\": \\"quia molestiae reprehenderit quasi aspernatur\\\\naut expedita occaecati aliquam eveniet laudantium\\\\nomnis quibusdam delectus saepe quia accusamus maiores nam est\\\\ncum et ducimus et vero voluptates excepturi deleniti ratione\\"
  },
  {
    \\"postId\\": 1,
    \\"id\\": 4,
    \\"name\\": \\"alias odio sit\\",
    \\"email\\": \\"Lew@alysha.tv\\",
    \\"body\\": \\"non et atque\\\\noccaecati deserunt quas accusantium unde odit nobis qui voluptatem\\\\nquia voluptas consequuntur itaque dolor\\\\net qui rerum deleniti ut occaecati\\"
  },
  {
    \\"postId\\": 1,
    \\"id\\": 5,
    \\"name\\": \\"vero eaque aliquid doloribus et culpa\\",
    \\"email\\": \\"Hayden@althea.biz\\",
    \\"body\\": \\"harum non quasi et ratione\\\\ntempore iure ex voluptates in ratione\\\\nharum architecto fugit inventore cupiditate\\\\nvoluptates magni quo et\\"
  }
]"
`;

exports[`regrest GET with params 2`] = `
Array [
  Object {
    "body": "laudantium enim quasi est quidem magnam voluptate ipsam eos
tempora quo necessitatibus
dolor quam autem quasi
reiciendis et nam sapiente accusantium",
    "email": "Eliseo@gardner.biz",
    "id": 1,
    "name": "id labore ex et quam laborum",
    "postId": 1,
  },
  Object {
    "body": "est natus enim nihil est dolore omnis voluptatem numquam
et omnis occaecati quod ullam at
voluptatem error expedita pariatur
nihil sint nostrum voluptatem reiciendis et",
    "email": "Jayne_Kuhic@sydney.com",
    "id": 2,
    "name": "quo vero reiciendis velit similique earum",
    "postId": 1,
  },
  Object {
    "body": "quia molestiae reprehenderit quasi aspernatur
aut expedita occaecati aliquam eveniet laudantium
omnis quibusdam delectus saepe quia accusamus maiores nam est
cum et ducimus et vero voluptates excepturi deleniti ratione",
    "email": "Nikita@garfield.biz",
    "id": 3,
    "name": "odio adipisci rerum aut animi",
    "postId": 1,
  },
  Object {
    "body": "non et atque
occaecati deserunt quas accusantium unde odit nobis qui voluptatem
quia voluptas consequuntur itaque dolor
et qui rerum deleniti ut occaecati",
    "email": "Lew@alysha.tv",
    "id": 4,
    "name": "alias odio sit",
    "postId": 1,
  },
  Object {
    "body": "harum non quasi et ratione
tempore iure ex voluptates in ratione
harum architecto fugit inventore cupiditate
voluptates magni quo et",
    "email": "Hayden@althea.biz",
    "id": 5,
    "name": "vero eaque aliquid doloribus et culpa",
    "postId": 1,
  },
]
`;

exports[`regrest PATCH 1`] = `
"{
  \\"userId\\": 1,
  \\"id\\": 1,
  \\"title\\": \\"foo\\",
  \\"body\\": \\"quia et suscipit\\\\nsuscipit recusandae consequuntur expedita et cum\\\\nreprehenderit molestiae ut ut quas totam\\\\nnostrum rerum est autem sunt rem eveniet architecto\\"
}"
`;

exports[`regrest PATCH 2`] = `
Object {
  "body": "quia et suscipit
suscipit recusandae consequuntur expedita et cum
reprehenderit molestiae ut ut quas totam
nostrum rerum est autem sunt rem eveniet architecto",
  "id": 1,
  "title": "foo",
  "userId": 1,
}
`;

exports[`regrest POST 1`] = `
"{
  \\"title\\": \\"foo\\",
  \\"body\\": \\"bar\\",
  \\"userId\\": 1,
  \\"id\\": 101
}"
`;

exports[`regrest POST 2`] = `
Object {
  "body": "bar",
  "id": 101,
  "title": "foo",
  "userId": 1,
}
`;

exports[`regrest PUT 1`] = `
"{
  \\"id\\": 1,
  \\"title\\": \\"foo\\",
  \\"body\\": \\"bar\\",
  \\"userId\\": 1
}"
`;

exports[`regrest PUT 2`] = `
Object {
  "body": "bar",
  "id": 1,
  "title": "foo",
  "userId": 1,
}
`;
